favicon and site name

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>OnConf (Template 8)</title>
-    <meta property="og:title" content="OnConf (Template 8)" />
+    <title>DashAI</title>
+    <meta property="og:title" content="DashAI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -28,6 +28,12 @@
 
       }
     </style>
+    <link
+      rel="shortcut icon"
+      href="public/dai_circle1.png"
+      type="icon/png"
+      sizes="32x32"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&amp;display=swap"
@@ -952,25 +958,25 @@ tabButtons.forEach((tabButton, index) => {
           <div class="home-container10">
             <div class="home-container11">
               <img
-                src="public/logos/untitled-500w.png"
                 alt="image"
+                src="public/logos/untitled-500w.png"
                 class="home-image07"
               />
               <img
-                src="public/logos/logo-sm-500w.jpeg"
                 alt="image"
+                src="public/logos/logo-sm-500w.jpeg"
                 class="home-image08"
               />
             </div>
             <div class="home-container12">
               <img
-                src="public/logos/img_3288-200h.jpg"
                 alt="image"
+                src="public/logos/img_3288-200h.jpg"
                 class="home-image09"
               />
               <img
-                src="public/logos/logo-imfd-200h.png"
                 alt="image"
+                src="public/logos/logo-imfd-200h.png"
                 class="home-image10"
               />
             </div>
